Zeplin Type Changed Screens

--- a/app/src/main/res/layout/activity_account_limits.xml
+++ b/app/src/main/res/layout/activity_account_limits.xml
@@ -8,26 +8,27 @@
     tools:context=".view.AccountLimitsActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="156dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/_12sdp"
         android:background="@drawable/card_bottomradius"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="67dp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_45sdp"
             android:src="@drawable/ic_back" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_14sdp"
             android:fontFamily="@font/opensans_bold"
-            android:text="Account Limits"
+            android:text="@string/account_limits"
             android:textColor="@color/black"
-            android:textSize="24dp" />
+            android:textSize="@dimen/_16ssp" />
 
 
     </LinearLayout>
@@ -45,9 +46,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="@dimen/_21sdp"
                 android:orientation="horizontal"
-                android:paddingLeft="32dp">
+                android:paddingLeft="@dimen/_21sdp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -57,12 +58,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="6dp"
                     android:fontFamily="@font/opensans_semibold"
                     android:gravity="center"
-                    android:text="Buy Tokens"
+                    android:text="@string/buytoken"
                     android:textColor="@color/primary_black"
-                    android:textSize="18dp" />
+                    android:textSize="@dimen/_12ssp" />
 
 
             </LinearLayout>
@@ -70,33 +71,39 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_11sdp"
+                android:layout_marginEnd="@dimen/_11sdp"
                 app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="15dp">
+                app:cardCornerRadius="@dimen/_10sdp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/_11sdp"
+                    android:paddingBottom="@dimen/_11sdp"
+
+                    >
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_11sdp"
                         android:gravity="center"
+                        android:paddingTop="@dimen/_8sdp"
+                        android:paddingBottom="@dimen/_10sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
+                            android:layout_marginStart="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="left"
-                            android:text="Bank Account"
+                            android:text="@string/bank_account"
                             android:textColor="#767676"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
                         <TextView
                             android:id="@+id/tvBuyTokenBankLimit"
@@ -104,30 +111,30 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
-                            android:paddingEnd="16dp"
-                            android:text="250,000.00/Week"
+                            android:paddingEnd="@dimen/_11sdp"
+                            android:text="@string/weeklimittext"
                             android:textColor="@color/primary_black"
-                            android:textSize="16sp" />
+                            android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:paddingTop="@dimen/_8sdp"
+                        android:paddingBottom="@dimen/_10sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
+                            android:layout_marginStart="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="left"
-                            android:text="Debit Card"
+                            android:text="@string/bebit_card"
                             android:textColor="#767676"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
                         <TextView
                             android:id="@+id/tvBuyTokenDebitLimit"
@@ -135,28 +142,30 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
-                            android:paddingEnd="16dp"
-                            android:text="250,000.00/Day"
+                            android:paddingEnd="@dimen/_11sdp"
+                            android:text="@string/daylimittext"
                             android:textColor="@color/primary_black"
-                            android:textSize="16dp" />
-                    </LinearLayout>
+                            android:textSize="@dimen/_11ssp" />
 
+
+                    </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
+                        android:layout_height="wrap_content"
+                       android:gravity="center"
+                        android:paddingTop="@dimen/_8sdp"
+                        android:paddingBottom="@dimen/_10sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
+                            android:layout_marginStart="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="left"
-                            android:text="Credit Card"
+                            android:text="@string/credit_card"
                             android:textColor="#767676"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
                         <TextView
                             android:id="@+id/tvBuyTokenCreditLimit"
@@ -164,10 +173,10 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
-                            android:paddingEnd="16dp"
-                            android:text="250,000.00/Day"
+                            android:paddingEnd="@dimen/_11sdp"
+                            android:text="@string/daylimittext"
                             android:textColor="@color/primary_black"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
@@ -178,9 +187,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="@dimen/_28sdp"
                 android:orientation="horizontal"
-                android:paddingLeft="32dp">
+                android:paddingStart="@dimen/_21sdp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -190,12 +199,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="@dimen/_7sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:gravity="center"
-                    android:text="Withdraw"
+                    android:text="@string/withdraw"
                     android:textColor="@color/primary_black"
-                    android:textSize="18dp" />
+                    android:textSize="@dimen/_12ssp" />
 
 
             </LinearLayout>
@@ -204,33 +213,38 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_11sdp"
+                android:layout_marginEnd="@dimen/_11sdp"
                 app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="15dp">
+                app:cardCornerRadius="@dimen/_10sdp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/_11sdp"
+
+                    >
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_11sdp"
                         android:gravity="center"
+                        android:paddingTop="@dimen/_8sdp"
+                        android:paddingBottom="@dimen/_10sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
+                            android:layout_marginStart="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="left"
-                            android:text="Bank Account"
+                            android:text="@string/bank_account"
                             android:textColor="#767676"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
                         <TextView
                             android:id="@+id/tvWithTokenBankLimit"
@@ -238,30 +252,30 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
-                            android:paddingEnd="16dp"
-                            android:text="250,000.00/Week"
+                            android:paddingEnd="@dimen/_11sdp"
+                            android:text="@string/weeklimittext"
                             android:textColor="@color/primary_black"
-                            android:textSize="16sp" />
+                            android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:paddingTop="@dimen/_8sdp"
+                        android:paddingBottom="@dimen/_10sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
+                            android:layout_marginStart="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="left"
-                            android:text="Instant Pay"
+                            android:text="@string/instant"
                             android:textColor="#767676"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
                         <TextView
                             android:id="@+id/tvWithTokenInstantLimit"
@@ -269,46 +283,48 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
-                            android:paddingEnd="16dp"
-                            android:text="250,000.00/Day"
+                            android:paddingEnd="@dimen/_11sdp"
+                            android:text="@string/daylimittext"
                             android:textColor="@color/primary_black"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:paddingTop="@dimen/_8sdp"
+                        android:paddingBottom="@dimen/_10sdp"
+                        android:layout_marginBottom="@dimen/_11sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
+                            android:layout_marginStart="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="left"
-                            android:text="Gift Card"
+                            android:text="@string/giftcard"
                             android:textColor="#767676"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
                         <TextView
-                            android:id="@+id/tvWithTokenGiftLimit"
+                            android:id="@+id/tvBuyTokenGiftLimit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
-                            android:paddingEnd="16dp"
-                            android:text="250,000.00/Week"
+                            android:paddingEnd="@dimen/_11sdp"
+                            android:text="@string/weeklimittext"
                             android:textColor="@color/primary_black"
-                            android:textSize="16dp" />
+                            android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
 
             <View
                 android:layout_width="match_parent"
