--- a/app/src/main/res/drawable-v24/corecircle.xml
+++ b/app/src/main/res/drawable-v24/corecircle.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="35dp" />
+            <corners android:radius="@dimen/_24sdp" />
             <stroke android:width="2dp" android:color="#009c98" />
         </shape>
     </item>
