--- a/app/src/main/res/drawable-v24/exitbtnbackgroundcolor.xml
+++ b/app/src/main/res/drawable-v24/exitbtnbackgroundcolor.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:startColor="@color/white" android:centerColor="@color/white" android:endColor="@color/white"/>
     <stroke android:width="2sp" android:color="@color/white"/>
-    <corners android:radius="50dp"/>
+    <corners android:radius="@dimen/_21sdp"/>
 
 
 </shape>
