--- a/app/src/main/res/layout/activity_identity_under_review.xml
+++ b/app/src/main/res/layout/activity_identity_under_review.xml
@@ -24,37 +24,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_close"
-        android:layout_marginTop="67dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginTop="@dimen/_45sdp"
+        android:layout_marginStart="@dimen/_21sdp"
         />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_in_progress_icon"
         android:layout_gravity="center"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="@dimen/_45sdp"
 
         />
     <TextView
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/ivtitle"
-        android:textSize="24sp"
+        android:textSize="@dimen/_16ssp"
+        android:layout_marginStart="@dimen/_63sdp"
+        android:layout_marginEnd="@dimen/_63sdp"
         android:textColor="@color/primary_black"
         android:textAlignment="center"
         android:layout_gravity="center"
-        android:layout_marginTop="30.5dp"
+        android:layout_marginTop="@dimen/_21sdp"
         android:fontFamily="@font/opensans_bold"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/ivunder_review"
-        android:textSize="15dp"
+        android:textSize="@dimen/_11ssp"
         android:textColor="@color/primary_black"
-        android:layout_marginLeft="31.5dp"
-        android:layout_marginRight="31.5dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginLeft="@dimen/_21sdp"
+        android:layout_marginRight="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:textAlignment="center"
         android:textStyle="normal"
         android:fontFamily="@font/opensans_regular"
@@ -62,13 +64,13 @@
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/idveriDoneBtn"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:layout_marginTop="217dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_145sdp"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:layout_marginEnd="@dimen/_21sdp"
                 app:cardBackgroundColor="@color/primary_color"
-                app:cardCornerRadius="32dp"
-                android:layout_marginBottom="21dp"
+                app:cardCornerRadius="@dimen/_21sdp"
+                android:layout_marginBottom="@dimen/_21sdp"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -76,7 +78,7 @@
                     android:text="@string/done"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/_12ssp"
                     android:fontFamily="@font/opensans_bold"
                     />
             </com.google.android.material.card.MaterialCardView>
