--- a/app/src/main/res/layout/activity_identity_veri_sucessful.xml
+++ b/app/src/main/res/layout/activity_identity_veri_sucessful.xml
@@ -21,22 +21,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_close"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="67dp"
+        android:layout_marginStart="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_45sdp"
         />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_success_icon"
         android:layout_gravity="center"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="@dimen/_31sdp"
 
         />
     <TextView
-        android:layout_width="240dp"
+        android:layout_width="@dimen/_200sdp"
         android:layout_height="wrap_content"
         android:text="@string/iv_success"
-        android:textSize="24dp"
+        android:textSize="@dimen/_16ssp"
+        android:layout_marginEnd="@dimen/_21sdp"
+        android:layout_marginStart="@dimen/_21sdp"
+
         android:textColor="@color/primary_black"
         android:textAlignment="center"
         android:layout_gravity="center"
@@ -47,23 +50,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/iv_success_content"
-        android:textSize="17dp"
+        android:textSize="@dimen/_12ssp"
         android:textColor="@color/primary_black"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginLeft="@dimen/_21sdp"
+        android:layout_marginRight="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_21sdp"
         android:textAlignment="center"
         android:fontFamily="@font/opensans_regular"
         />
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/idveriDoneBtn"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_marginTop="217dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_height="@dimen/_43sdp"
+        android:layout_marginTop="@dimen/_120sdp"
+        android:layout_marginStart="@dimen/_21sdp"
+        android:layout_marginEnd="@dimen/_21sdp"
         app:cardBackgroundColor="@color/primary_color"
-        app:cardCornerRadius="32dp"
+        app:cardCornerRadius="@dimen/_21sdp"
         android:layout_marginBottom="21dp"
         >
         <TextView
@@ -72,7 +75,7 @@
             android:text="@string/done"
             android:layout_gravity="center"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/_12ssp"
             android:fontFamily="@font/opensans_bold"
             />
     </com.google.android.material.card.MaterialCardView>
