--- a/app/src/main/res/layout/fragment_face_id_setup_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_face_id_setup_bottom_sheet.xml
@@ -5,18 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingEnd="32dp"
-    android:paddingStart="30dp"
+    android:paddingEnd="@dimen/_21sdp"
+    android:paddingStart="@dimen/_21sdp"
     tools:context=".view.CustomerProfileActivity"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
     >
 
     <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
+        android:layout_height="@dimen/_42sdp"
         android:orientation="vertical"
         android:paddingBottom="30dp">
 
@@ -41,8 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/faceidsetuptxt"
-        android:textSize="20sp"
-        android:layout_marginTop="38dp"
+        android:textSize="@dimen/_16sdp"
         android:fontFamily="@font/opensans_bold"
         android:textColor="@color/black"
         />
@@ -50,8 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/faceidsetup"
-        android:textSize="17sp"
-        android:lineSpacingExtra="6dp"
+        android:textSize="@dimen/_12ssp"
+        android:lineSpacingExtra="@dimen/_8sdp"
         android:layout_marginTop="23dp"
         android:fontFamily="@font/opensans_semibold"
         android:textColor="@color/primary_black"
@@ -61,13 +59,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/faceidsetupBtn"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_marginTop="62dp"
+        android:layout_height="@dimen/_43sdp"
+        android:layout_marginTop="@dimen/_42sdp"
         app:cardBackgroundColor="@color/primary_color"
-        app:cardCornerRadius="32dp"
+        app:cardCornerRadius="@dimen/_21sdp"
         android:layout_marginBottom="21dp"
         >
         <TextView
@@ -76,16 +74,16 @@
             android:text="@string/sepupid"
             android:layout_gravity="center"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/_12ssp"
             android:fontFamily="@font/opensans_bold"
             />
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:id="@+id/layoutLogin"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_11sdp"
                 android:background="@drawable/shape_green_round_rect_core"
                 android:orientation="vertical"
                 android:gravity="center">
@@ -97,14 +95,14 @@
                     android:gravity="center"
                     android:text="@string/setupnotnowBtn"
                     android:textColor="@color/primary_color"
-                    android:textSize="17sp" />
+                    android:textSize="@dimen/_12ssp" />
             </LinearLayout>
 
 
         </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_height="@dimen/_27sdp"
         />
 
 
